--- a/app/src/main/res/layout/activity_config_server.xml
+++ b/app/src/main/res/layout/activity_config_server.xml
@@ -1,73 +1,55 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<?xml version = "1.0" encoding = "utf-8"?>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    tools:context=".ConfigServerActivity">
+    android:layout_height="match_parent"
+    android:layout_margin="16dp"
+    tools:context=".MainActivity">
 
-    <TextView
+    <!--    <EditText-->
+    <!--        android:id="@+id/etIP"-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:hint="IP-Address"-->
+    <!--        android:inputType="text" />-->
+
+    <!--    <EditText-->
+    <!--        android:id="@+id/etPort"-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:layout_below="@+id/etIP"-->
+    <!--        android:hint="Port No"-->
+    <!--        android:inputType="number" />-->
+    <!--        android:layout_below = "@+id/etPort"-->
+    <Button
+        android:id="@+id/btnConnect"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
- android:background="@color/design_default_color_secondary_variant"
-        android:gravity="center"
-        android:padding="6dp"
-        android:text="شرایط و مقررات استفاده از اپلیکیشن"
-        android:textColor="@color/white"
-        android:textSize="17sp"/>
+        android:layout_gravity="center"
+        android:layout_marginTop="16dp"
+        android:text="Connect To Server" />
 
-    <ScrollView
+    <TextView
+        android:id="@+id/tvMessages"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/etMessage"
+        android:layout_below="@+id/btnConnect"
+        android:inputType="textMultiLine"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+    <EditText
+        android:id="@+id/etMessage"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/btnSend"
+        android:hint="Enter Message"
+        android:inputType="text" />
 
-            <WebView
-                android:id="@+id/webView"
-                android:layout_width="match_parent"
-                android:layout_height="650dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <CheckBox
-                android:id="@+id/materialCheckBox"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:gravity="center"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/webView" />
-
-            <TextView
-                android:id="@+id/textView16"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="12dp"
-                android:padding="5dp"
-                android:text="قوانین و شرایط را خوانده، با آنها موافقم."
-                android:textColor="@color/black"
-                app:layout_constraintEnd_toStartOf="@+id/materialCheckBox"
-                app:layout_constraintTop_toBottomOf="@+id/webView" />
-
-            <Button
-                android:id="@+id/btnAgree"
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="152dp"
-                android:layout_marginTop="4dp"
-                android:layout_marginEnd="159dp"
-                android:padding="5dp"
-                android:text="تایید"
-                android:textColor="@color/black"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView16" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </ScrollView>
-</LinearLayout>
+    <Button
+        android:id="@+id/btnSend"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:text="SEND" />
+</RelativeLayout>
